--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -20,14 +20,24 @@ nav h3{
     font-size: 24px;
     line-height: 30px;
     letter-spacing: 0;
+    transition: 0.3s;
 }   
 
+nav h3:hover{
+    transform: scale(1.2);
+}
 nav input{
     width: 300px;
     height: 39px;
     border-radius: 6px;
     border: 1px;
     padding-left: 13px;
+    transition: 0.3s;
+    margin-left: 65px;
+}
+
+nav input:hover{
+    transform: scale(1.1);
 }
 
 nav .menu {
@@ -49,8 +59,11 @@ nav li {
 
 a{
     text-decoration: none;
+    transition: 0.3s;
 }
-
+a:hover{
+    transform: scale(1.5);
+}
 .head{
     font-family: "Inter", sans-serif;
     background-color: #4A3DB5;
@@ -79,6 +92,11 @@ a{
     height: 38px;
     border-radius: 6px;
     border: 1px;
+    transition: 0.3s;
+}
+.head button:hover{
+    transform: scale(1.2);
+    background-color:#fdc51c ;
 }
 .container-sort{
     display: flex;
@@ -134,6 +152,15 @@ a{
     line-height: 24px;
     letter-spacing: 0px;
 }
+
+.main .arrange button{
+    transition: 0.3s;
+}
+
+.main .arrange button:hover{
+    transform: scale(1.1);
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* 2 cột */
@@ -198,6 +225,12 @@ a{
     background-color: #FFC107;
     border-radius: 6px;
     border: 1px;
+    transition: 0.3s;
+}
+
+.container-contain li button:hover{
+    transform: scale(1.2);
+    background-color:#fdc51c ;
 }
 
 .pagination {
