--- a/css/category-manager.css
+++ b/css/category-manager.css
@@ -139,7 +139,7 @@ td {
     letter-spacing: 0px;
 }
 
-.table tr:nth-of-type(1) {
+.table thead tr:nth-of-type(1) {
     background-color: #212529;
     color: #FFFFFF;
 }
@@ -163,7 +163,7 @@ td {
     margin-right: 5px;
     background-color: #DC3545;
     color: #FFFFFF;
-    padding: 5px 9px;
+    padding: 7px 11px;
     border-radius: 4px;
     border: 1px;
     font-size: 16.93px;
@@ -174,7 +174,7 @@ td {
     background-color: #c03442;
 }
 
-.table tr:nth-child(even) {
+.table tr:nth-child(odd) {
     background-color: #DEE2E6; /* Màu nền cho hàng chẵn */
 }
 
@@ -195,7 +195,7 @@ td {
         0px 20px 24px -4px #10182814;
     border-radius: 8px;
     width: 480px;
-    height: 334px;
+    max-height: 400px;
 }
 
 .add-category .add-head {
@@ -258,6 +258,7 @@ td {
     line-height: 14px;
     letter-spacing: 0px;
     transition: 0.3s;
+    margin-bottom:12px ;
 }
 
 .add-category .add-footer .btn-huy {
@@ -443,14 +444,22 @@ td {
 }
 
 /* Định dạng chung cho thông báo lỗi */
+.add-main input.error {
+    border: 1px solid #DC3545;
+    background-color: #F8D7DA;
+}
+
 .error-message {
     color: #DC3545;
     font-size: 14px;
     margin-top: 4px;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-.footer input.error {
-    border: 1px solid #DC3545;
-    background-color: #F8D7DA;
+.error-message.show {
+    opacity: 1;
+    visibility: visible;
 }
+
